plugin/testData/annotator/perl/unreachableCode/forWhenDefaultPostfix.code
sub subname {
    say 'start';
    for($something){
        say 'before';
        say $a when($a);
        say 'mid';
        default{
            say $c;
        }
        say '<error descr="Unreachable code">after</error>';
    }
    say 'end';
}
